--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "zero2prod-axum"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+path = "src/lib.rs"
+
 [dependencies]
 axum = "0.8.7"
 serde = { version = "1.0.228", features = ["derive"] }
@@ -12,3 +15,6 @@ tokio = { version = "1.48.0", features = ["full"] }
 
 [target.aarch64-apple-darwin]
 rustflags= ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
+
+[dev-dependencies]
+reqwest = "0.12.25"
