--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,11 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
 tokio = { version = "1.48.0", features = ["full"] }
+tower-http = { version = "0.6.8", features = ["trace"] }
+tracing = { version = "0.1.43", features = ["log"] }
+tracing-bunyan-formatter = "0.3.10"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
+uuid = { version = "1.19.0", features = ["v4"] }
 
 [target.aarch64-apple-darwin]
 rustflags= ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
