--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,11 +10,13 @@ path = "src/lib.rs"
 axum = "0.8.7"
 chrono = "0.4.42"
 config = "0.15.19"
+secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
 tokio = { version = "1.48.0", features = ["full"] }
-tower-http = { version = "0.6.8", features = ["trace"] }
+tower = "0.5.2"
+tower-http = { version = "0.6.8", features = ["propagate-header", "request-id", "trace"] }
 tracing = { version = "0.1.43", features = ["log"] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
