--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tower-http = { version = "0.6.8", features = ["propagate-header", "request-id", 
 tracing = { version = "0.1.43", features = ["log"] }
 tracing-bunyan-formatter = "0.3.10"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
+unicode-segmentation = "1.12.0"
 uuid = { version = "1.19.0", features = ["v4"] }
 
 [target.aarch64-apple-darwin]
