--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,9 @@ path = "src/lib.rs"
 [dependencies]
 axum = "0.8.7"
 chrono = "0.4.42"
+claims = "0.8.0"
 config = "0.15.19"
+fake = "4.4.0"
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
@@ -22,6 +24,7 @@ tracing-bunyan-formatter = "0.3.10"
 tracing-subscriber = { version = "0.3.22", features = ["env-filter", "registry"] }
 unicode-segmentation = "1.12.0"
 uuid = { version = "1.19.0", features = ["v4"] }
+validator = "0.20.0"
 
 [target.aarch64-apple-darwin]
 rustflags= ["-C", "link-arg=-fuse-ld=/opt/homebrew/opt/llvm/bin/ld64.lld"]
